# advent-of-code-2024

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
day01/: BUILD.bazel  Main.hs
day02/: BUILD.bazel  Main.hs
day03/: BUILD.bazel  Main.hs
day04/: BUILD.bazel  Main.hs
day05/: BUILD.bazel  Main.hs
day06/: BUILD.bazel  Main.hs
day07/: BUILD.bazel  Main.hs
tools/: BUILD.bazel  buildifier-lint.sh  ormolu.bzl  ormolu.sh
